# rules_buf

./: BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod
gazelle/buf/: BUILD
