"""
 rules_buf module
"""

module(
    name = "rules_buf",
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_proto", version = "4.0.0")
bazel_dep(name = "rules_go", version = "0.39.1", repo_name = "io_bazel_rules_go")  # closest non-yanked version to 0.33.0

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.18.3",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

bazel_dep(name = "gazelle", version = "0.31.1", dev_dependency = True, repo_name = "bazel_gazelle")
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module(
    path = "github.com/bazelbuild/buildtools",
)
go_deps.gazelle_override(
    directives = [
        "gazelle:go_naming_convention go_default_library",
    ],
    path = "github.com/bazelbuild/buildtools",
)
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
)

bazel_dep(name = "stardoc", version = "0.6.2", repo_name = "io_bazel_stardoc")
